fix: change profile photo sizes and section text align

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ header {
   background-color: #fff;
   border-radius: 10px;
   padding: 10px 20px;
+  text-align: justify;
 }
 h3 {
   margin-top: 0px;
@@ -81,6 +82,6 @@ h3 {
 }
 #profile img {
   border: 10px solid #cedddf;
-  border-radius: 100px;
+  border-radius: 125px;
   padding: 10px;
 }
